[BACKLOG-16170] [DEV] - Update HDFS shim and other related code to use knox

--- a/impl/vfs/hdfs/pom.xml
+++ b/impl/vfs/hdfs/pom.xml
@@ -18,7 +18,13 @@
     <dependency>
       <groupId>pentaho-kettle</groupId>
       <artifactId>kettle-core</artifactId>
-      <version>${dependency.kettle.revision}</version>
+      <version>${project.version}</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>pentaho</groupId>
+      <artifactId>pentaho-metastore-locator-api</artifactId>
+      <version>${project.version}</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
